recipe.html update

--- a/recipe.html
+++ b/recipe.html
@@ -14,6 +14,7 @@
 		   crossorigin="anonymous">
 		</script>
 		<script src="assets/js/dbAction.js"></script>
+		<script src="assets/js/display.js"></script>
 		<script src="assets/js/script.js"></script>
 
 
